Fixed footer padding and alignment

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -506,6 +506,10 @@ footer {
 
         > div {
             flex-grow: 1;
+            
+            &:nth-child(1) {
+                text-align: left;
+            }
 
             &:nth-child(2) {
                 text-align: center;
@@ -518,7 +522,6 @@ footer {
 
         .logo {
             width: 150px;
-            float: left;
         }
     }
 }
@@ -597,6 +600,25 @@ textarea {
 }
 
 @media (max-width: 768px) {
+    footer {
+        .inner {
+            > div {
+                width: 100%;
+
+                &:nth-child(1) {
+                    text-align: center;
+                    padding-bottom: 10px;
+                }
+                &:nth-child(2) {
+                    text-align: center;
+                    padding-bottom: 10px;
+                }
+                &:last-child {
+                    text-align: center;
+                }
+            }
+        }
+    }
 }
 
 @media (max-width: 480px) {
